--- a/company-history.html
+++ b/company-history.html
@@ -165,12 +165,12 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-area-inner">
-                        <h1 class="title">
+                        <h1 class="title" data-i18n="company-history.breadcrumb.title">
                             KeMixPort – Vietnam's expert in manufacturing & exporting sawdust charcoal
                         </h1>
                         <div class="nav-area-navigation">
-                            <a href="#">home</a>
-                            <a class="current" href="#">Company History</a>
+                            <a href="#" data-i18n="company-history.breadcrumb.home">home</a>
+                            <a class="current" href="#" data-i18n="company-history.breadcrumb.about">About Us</a>
                         </div>
                     </div>
                 </div>
@@ -186,20 +186,22 @@
                 <div class="col-lg-12">
                     <div class="about-wrapper-area-five">
                         <div class="about-left-wrapper">
-                            <span class="pre">Our Story</span>
-                            <h2 class="title">We proudly deliver eco-friendly products, produced fromsustainable and
-                                well-managed raw materials.</h2>
-                            <p class="disc">
-                                KeMixPort is a manufacturer and supplier of sawdust briquette charcoal, made
-                                from 100% natural wood collected from traditional woodworking villages
-                                across Vietnam.
+                            <span class="pre" data-i18n="company-history.story.pre">Our Story</span>
+                            <h2 class="title" data-i18n="company-history.story.title">
+                                We proudly deliver eco-friendly products, produced from sustainable and well-managed raw
+                                materials.
+                            </h2>
+                            <p class="disc" data-i18n="company-history.story.desc">
+                                KeMixPort is a manufacturer and supplier of sawdust briquette charcoal, made from 100%
+                                natural wood collected from traditional woodworking villages across Vietnam.
                             </p>
-                            <a href="#" class="rts-btn btn-primary">More About Us
+                            <a href="#" class="rts-btn btn-primary" data-i18n="company-history.story.button">
+                                More About Us
                                 <img src="assets/images/icons/arrow-up-right.svg" alt="">
                             </a>
                         </div>
                         <div class="right-thumbnail">
-                            <img src="assets/images/about/about1.jpg" alt="about">
+                            <img src="assets/images/about/about1.png" alt="about">
                         </div>
                     </div>
                 </div>
@@ -214,9 +216,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-style-two-center inner">
-                        <span class="pre">Our Commitment To Community</span>
-                        <h2 class="title">We're focused on achieving your <br>
-                            project vision and business</h2>
+                        <span class="pre" data-i18n="company-history.commitment.pre">Our Commitment To Community</span>
+                        <h2 class="title" data-i18n="company-history.commitment.title">
+                            We're focused on achieving your <br> project vision and business
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -236,8 +239,8 @@
                             <div class="icon">
                                 <img src="assets/images/history/01.svg" alt="ion">
                             </div>
-                            <h5 class="title">The Beginning</h5>
-                            <p>
+                            <h5 class="title" data-i18n="company-history.history.2010.title">The Beginning</h5>
+                            <p data-i18n="company-history.history.2010.desc">
                                 Started by supplying raw materials like sawdust and semi-finished charcoal to local
                                 charcoal factories in VietNam.
                             </p>
@@ -256,8 +259,8 @@
                             <div class="icon">
                                 <img src="assets/images/history/02.svg" alt="ion">
                             </div>
-                            <h5 class="title">Mission</h5>
-                            <p>
+                            <h5 class="title" data-i18n="company-history.history.2016.title">Mission</h5>
+                            <p data-i18n="company-history.history.2016.desc">
                                 Expanded with 32 charcoal kilns. Supplied to domestic trading companies for export to
                                 Korea, Australia, Japan, and the Middle East.
                             </p>
@@ -276,8 +279,8 @@
                             <div class="icon">
                                 <img src="assets/images/history/03.svg" alt="ion">
                             </div>
-                            <h5 class="title">We are global</h5>
-                            <p>
+                            <h5 class="title" data-i18n="company-history.history.2025.title">We are global</h5>
+                            <p data-i18n="company-history.history.2025.desc">
                                 KeMixPort becomes an export company, responsible for quality control and export support
                                 for factories sourcing materials from us.
                             </p>
@@ -296,8 +299,8 @@
                             <div class="icon">
                                 <img src="assets/images/history/04.svg" alt="ion">
                             </div>
-                            <h5 class="title">Brand Strategy</h5>
-                            <p>
+                            <h5 class="title" data-i18n="company-history.history.2025plus.title">Brand Strategy</h5>
+                            <p data-i18n="company-history.history.2025plus.desc">
                                 Aiming to develop and elevate Kemixport into an international brand. We proudly being a
                                 part of inovation today.
                             </p>
@@ -395,8 +398,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-center-style-one dark-title">
-                        <span class="pre">Client’s Feedback</span>
-                        <h2 class="title">What Our Client’s Say After <br>
+                        <span class="pre">Client's Feedback</span>
+                        <h2 class="title">What Our Client's Say After <br>
                             Get Our Service</h2>
                     </div>
                 </div>
@@ -445,7 +448,7 @@
                                     <div class="single-testimonials-area-one">
                                         <p class="disc">
                                             "For our business in Japan, trust is everything. We do not sign a contract
-                                            without visiting the factory. When I visited KeMixPort, I didn’t just see
+                                            without visiting the factory. When I visited KeMixPort, I didn't just see
                                             machines. I saw a team with a deep, generational knowledge of charcoal. You
                                             can feel their pride in the product. After my discussion with the director,
                                             I knew we had found our long-term partner."
