--- a/index.html
+++ b/index.html
@@ -619,13 +619,13 @@
                                             <div class="swiper-slide">
                                                 <div class="testimonials-area-style-4">
                                                     <div class="thumbnail-left">
-                                                        <img src="assets/images/testimonials/04.webp"
+                                                        <img src="assets/images/testimonials/rv4.png"
                                                             alt="testimoanbils">
                                                     </div>
                                                     <div class="right-content-area">
                                                         <div class="author-quote-area">
                                                             <div class="avatar">
-                                                                <img src="assets/images/testimonials/01.webp"
+                                                                <img src="assets/images/testimonials/cus1.png"
                                                                     alt="avatar">
                                                                 <div class="info">
                                                                     <h6 class="title" data-i18n="testimonial.1.name">
@@ -644,13 +644,13 @@
                                             <div class="swiper-slide">
                                                 <div class="testimonials-area-style-4">
                                                     <div class="thumbnail-left">
-                                                        <img src="assets/images/testimonials/05.webp"
+                                                        <img src="assets/images/testimonials/rv3.png"
                                                             alt="testimoanbils">
                                                     </div>
                                                     <div class="right-content-area">
                                                         <div class="author-quote-area">
                                                             <div class="avatar">
-                                                                <img src="assets/images/testimonials/02.webp"
+                                                                <img src="assets/images/testimonials/cus2.png"
                                                                     alt="avatar">
                                                                 <div class="info">
                                                                     <h6 class="title" data-i18n="testimonial.2.name">
@@ -669,13 +669,13 @@
                                             <div class="swiper-slide">
                                                 <div class="testimonials-area-style-4">
                                                     <div class="thumbnail-left">
-                                                        <img src="assets/images/testimonials/04.webp"
+                                                        <img src="assets/images/testimonials/rv1.png"
                                                             alt="testimoanbils">
                                                     </div>
                                                     <div class="right-content-area">
                                                         <div class="author-quote-area">
                                                             <div class="avatar">
-                                                                <img src="assets/images/testimonials/02.webp"
+                                                                <img src="assets/images/testimonials/cus3.png"
                                                                     alt="avatar">
                                                                 <div class="info">
                                                                     <h6 class="title" data-i18n="testimonial.3.name">
@@ -694,13 +694,13 @@
                                             <div class="swiper-slide">
                                                 <div class="testimonials-area-style-4">
                                                     <div class="thumbnail-left">
-                                                        <img src="assets/images/testimonials/04.webp"
+                                                        <img src="assets/images/testimonials/rounded-in-photoretrica.png"
                                                             alt="testimoanbils">
                                                     </div>
                                                     <div class="right-content-area">
                                                         <div class="author-quote-area">
                                                             <div class="avatar">
-                                                                <img src="assets/images/testimonials/02.webp"
+                                                                <img src="assets/images/testimonials/cus4.png"
                                                                     alt="avatar">
                                                                 <div class="info">
                                                                     <h6 class="title" data-i18n="testimonial.4.name">
