--- a/our-clients.html
+++ b/our-clients.html
@@ -165,13 +165,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-area-inner">
-                        <span class="water-text">Products</span>
-                        <h1 class="title">
+                        <span class="water-text" data-i18n="clients.breadcrumb.water">Products</span>
+                        <h1 class="title" data-i18n="clients.breadcrumb.title">
                             Products Technical Specsification
                         </h1>
                         <div class="nav-area-navigation">
-                            <a href="#">home</a>
-                            <a class="current" href="#">Products</a>
+                            <a href="#" data-i18n="clients.breadcrumb.home">home</a>
+                            <a class="current" href="#" data-i18n="clients.breadcrumb.products">Products</a>
                         </div>
                     </div>
                 </div>
@@ -196,16 +196,18 @@
                             </div>
                         </div>
                         <div class="inner-content">
-                            <span>Our Charcoal Quality Commitment</span>
-                            <h3 class="title">We are committed to providing high-quality charcoal
+                            <span data-i18n="clients.commitment.title">Our Charcoal Quality Commitment</span>
+                            <h3 class="title" data-i18n="clients.commitment.heading">We are committed to providing
+                                high-quality charcoal
                                 that meets all usage requirements</h3>
                             <div class="signle-check-area">
                                 <div class="icon">
                                     <i class="fa-regular fa-check"></i>
                                 </div>
                                 <div class="info">
-                                    <h5 class="title">Eco-Friendly and Environmentally Sustainable Charcoal</h5>
-                                    <p class="disc">
+                                    <h5 class="title" data-i18n="clients.commitment.eco.title">Eco-Friendly and
+                                        Environmentally Sustainable Charcoal</h5>
+                                    <p class="disc" data-i18n="clients.commitment.eco.desc">
                                         Kemixport is committed to providing high-quality charcoal, produced from natural
                                         materials,
                                         ensuring excellent burning efficiency and minimizing environmental impact.
@@ -217,8 +219,9 @@
                                     <i class="fa-regular fa-check"></i>
                                 </div>
                                 <div class="info">
-                                    <h5 class="title">Quality Control & Production Supervision</h5>
-                                    <p class="disc">
+                                    <h5 class="title" data-i18n="clients.commitment.qc.title">Quality Control &
+                                        Production Supervision</h5>
+                                    <p class="disc" data-i18n="clients.commitment.qc.desc">
                                         Every batch of charcoal is strictly tested for moisture, size and calorific
                                         value,
                                         ensuring compliance with international standards and quality commitment to
@@ -231,8 +234,9 @@
                                     <i class="fa-regular fa-check"></i>
                                 </div>
                                 <div class="info">
-                                    <h5 class="title">Flexible Customization According to Customer Requirements</h5>
-                                    <p class="disc">
+                                    <h5 class="title" data-i18n="clients.commitment.flex.title">Flexible Customization
+                                        According to Customer Requirements</h5>
+                                    <p class="disc" data-i18n="clients.commitment.flex.desc">
                                         All specifications can be flexibly adjusted according to your specific
                                         requirements,
                                         ensuring our charcoal products perfectly match your business needs and
@@ -242,7 +246,8 @@
                             </div>
                             <a href="assets/images/clients/QML25-28260_2018433_F.PDF" class="rts-btn btn-primary mt--40"
                                 data-fancybox data-type="iframe"
-                                data-options='{"iframe": {"css": {"width": "90vw", "height": "90vh"}}}'>Learn More</a>
+                                data-options='{"iframe": {"css": {"width": "90vw", "height": "90vh"}}}'
+                                data-i18n="clients.commitment.button">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -257,8 +262,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-style-two-center inner">
-                        <span class="pre">Delivery Process</span>
-                        <h2 class="title">Professional Packaging, Safe Transportation</h2>
+                        <span class="pre" data-i18n="clients.delivery.pre">Delivery Process</span>
+                        <h2 class="title" data-i18n="clients.delivery.title">Professional Packaging, Safe Transportation
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -267,13 +273,14 @@
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
                             <img src="assets/images/brand/de_donggoi.png" alt="brand">
-                            <p>
+                            <p data-i18n="clients.delivery.material">
                                 Material: 5-layer carton box with PP moisture-proof liner.
                             </p>
                         </a>
                         <div class="inner">
                             <a href="#">
-                                <h5 class="title">Material: 5-layer carton box with PP moisture-proof liner.</h5>
+                                <h5 class="title" data-i18n="clients.delivery.material.title">Material: 5-layer carton
+                                    box with PP moisture-proof liner.</h5>
                             </a>
                         </div>
                     </div>
@@ -282,13 +289,14 @@
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
                             <img src="assets/images/brand/de_dôngi2.JPG" alt="brand">
-                            <p>
+                            <p data-i18n="clients.delivery.shrink">
                                 Shrink-wrapped with PE film or packed in jumbo bags as requested.
                             </p>
                         </a>
                         <div class="inner">
                             <a href="#">
-                                <h5 class="title">Shrink-wrapped with PE film or packed in jumbo bags as
+                                <h5 class="title" data-i18n="clients.delivery.shrink.title">Shrink-wrapped with PE film
+                                    or packed in jumbo bags as
                                     requested.</h5>
                             </a>
                         </div>
@@ -298,13 +306,14 @@
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
                             <img src="assets/images/brand/de_jjdo.jpg" alt="brand">
-                            <p>
+                            <p data-i18n="clients.delivery.weight">
                                 Weight: 10kg, 10.2kg, or customizable.
                             </p>
                         </a>
                         <div class="inner">
                             <a href="#">
-                                <h5 class="title">Weight: 10kg, 10.2kg, or customizable.</h5>
+                                <h5 class="title" data-i18n="clients.delivery.weight.title">Weight: 10kg, 10.2kg, or
+                                    customizable.</h5>
                             </a>
                         </div>
                     </div>
@@ -313,13 +322,14 @@
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
                             <img src="assets/images/brand/de_xetai.png" alt="brand">
-                            <p>
+                            <p data-i18n="clients.delivery.loading">
                                 Loading: Packed on fumigated wooden pallets.
                             </p>
                         </a>
                         <div class="inner">
                             <a href="#">
-                                <h5 class="title">Loading: Packed on fumigated wooden pallets.</h5>
+                                <h5 class="title" data-i18n="clients.delivery.loading.title">Loading: Packed on
+                                    fumigated wooden pallets.</h5>
                             </a>
                         </div>
                     </div>
@@ -328,13 +338,14 @@
                     <div class="single-branding-area-wrapper-one">
                         <a href="#" class="thumbnail">
                             <img src="assets/images/brand/de_container.jpg" alt="brand">
-                            <p>
+                            <p data-i18n="clients.delivery.container">
                                 Container: 18-20 tons (20ft), 25-27 tons (40ft), with moisture-proof nylon liner.
                             </p>
                         </a>
                         <div class="inner">
                             <a href="#">
-                                <h5 class="title">Container: 18-20 tons, 25-27 tons, with moisture-proof
+                                <h5 class="title" data-i18n="clients.delivery.container.title">Container: 18-20 tons,
+                                    25-27 tons, with moisture-proof
                                     nylon liner.</h5>
                             </a>
                         </div>
