--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
+                                        <h1 class="title" data-i18n="banner.title1">Clean Charcoal from Vietnam's Craft
                                             Villages
                                             <br> Your Global Partner
                                         </h1>
-                                        <p class="disc" data-i18n="banner.desc">
+                                        <p class="disc" data-i18n="banner.desc1">
                                             We transform wood by-products into smokeless, high-heat, eco-friendly fuel.
                                             Superior quality at direct factory prices.
                                         </p>
@@ -198,11 +198,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
+                                        <h1 class="title" data-i18n="banner.title2">Clean Charcoal from Vietnam's Craft
                                             Villages
                                             <br> Your Global Partner
                                         </h1>
-                                        <p class="disc" data-i18n="banner.desc">
+                                        <p class="disc" data-i18n="banner.desc2">
                                             We transform wood by-products into smokeless, high-heat, eco-friendly fuel.
                                             Superior quality at direct factory prices.
                                         </p>
@@ -224,11 +224,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
+                                        <h1 class="title" data-i18n="banner.title3">Clean Charcoal from Vietnam's Craft
                                             Villages
                                             <br> Your Global Partner
                                         </h1>
-                                        <p class="disc" data-i18n="banner.desc">
+                                        <p class="disc" data-i18n="banner.desc3">
                                             We transform wood by-products into smokeless, high-heat, eco-friendly fuel.
                                             Superior quality at direct factory prices.
                                         </p>
@@ -250,11 +250,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
+                                        <h1 class="title" data-i18n="banner.title4">Clean Charcoal from Vietnam's Craft
                                             Villages
                                             <br> Your Global Partner
                                         </h1>
-                                        <p class="disc" data-i18n="banner.desc">
+                                        <p class="disc" data-i18n="banner.desc4">
                                             We transform wood by-products into smokeless, high-heat, eco-friendly fuel.
                                             Superior quality at direct factory prices.
                                         </p>
